--- a/Univer/Univer/MainWindow.xaml
+++ b/Univer/Univer/MainWindow.xaml
@@ -3,6 +3,13 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        
+        <TextBox x:Name="tBox1" HorizontalAlignment="Left" Height="23" Margin="236,11,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tBox2" HorizontalAlignment="Left" Height="23" Margin="236,39,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="tBox3" HorizontalAlignment="Left" Height="23" Margin="236,67,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Название специальности" HorizontalAlignment="Left" Margin="10,16,0,0" VerticalAlignment="Top" Width="221"/>
+        <Label Content="Полное наименование специальности" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="221" RenderTransformOrigin="0.658,0.404"/>
+        <Label Content="Код специальности" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="221"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="433,291,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
     </Grid>
 </Window>
