--- a/Univer/Univer/MainWindow.xaml
+++ b/Univer/Univer/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Label Content="Полное наименование специальности" HorizontalAlignment="Left" Margin="10,42,0,0" VerticalAlignment="Top" Width="221" RenderTransformOrigin="0.658,0.404"/>
         <Label Content="Код специальности" HorizontalAlignment="Left" Margin="10,65,0,0" VerticalAlignment="Top" Width="221"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="433,291,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <TextBox x:Name="tBox4" HorizontalAlignment="Left" Height="23" Margin="236,108,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
